# aria-enroll-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: aria_mcp_server.py
src/aria_enroll_sdk/: __init__.py  canonical.py  cli.py  client.py  enroll.py  magic_token.py  manifest.py  signer.py  storage.py
tests/: test_canonical.py
tests/testdata/: golden-vectors.json
